# finam-plot

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
benchmarks/profiling/: time_series_plot.py
docs/source/: conf.py  index.rst
docs/source/about/: index.rst
docs/source/api/: index.rst
examples/: colormesh_noise.py  contour_noise_points.py  contour_noise_uniform.py  grid_spec.py  histogram.py  image_noise.py  image_parametric.py  regrid_from_uniform.py  schedule.py  time_series_noise.py
src/finam_plot/: __init__.py  colormesh.py  contour.py  grid_spec.py  image.py  line.py  plot.py  schedule.py  time_series.py  tools.py  xy.py
tests/: test_color_mesh.py  test_contours.py  test_grid_spec.py  test_image.py  test_line.py  test_schedule.py  test_time_series.py  test_xy_plot.py
