[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.4",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "finam_plot"
description = "FINAM live plot components."
authors = [{name = "FINAM Developers", email = "finam@ufz.de"}]
readme = "README.md"
license = {text = "LGPLv3"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "matplotlib>=3",
    "numpy>=1.14.5",
    "xarray>=2022.03",
    "finam @ git+https://git.ufz.de/FINAM/finam.git",
]

[project.urls]
Homepage = "https://FINAM-plot.pages.ufz.de/"
Documentation = "https://FINAM-plot.pages.ufz.de/"
Source = "https://git.ufz.de/FINAM/finam-plot"
Tracker = "https://git.ufz.de/FINAM/finam-plot/-/issues"
Changelog = "https://git.ufz.de/FINAM/finam-plot/-/blob/main/finam-plot/CHANGELOG.md"

[project.optional-dependencies]
doc = [
    "sphinx>=5",
    "pydata-sphinx-theme==0.11",
    "numpydoc>=1.1",
    "sphinx-design>=0.3",
    "docutils>=0.18", # mdinclude with myst
]
test = [
    "pytest-cov>=3",
    "pytest-benchmark[histogram]>=4.0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "src/finam_plot/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.black]
exclude = "_version.py"
target-version = [
    "py38",
    "py39"
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage]
[tool.coverage.run]
source = ["finam_plot"]
omit = [
    "*docs*",
    "*examples*",
    "*tests*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
]

[tool.pylint]
[tool.pylint.master]
extension-pkg-whitelist = [
    "numpy",
    "scipy",
]
ignore = [
    "_version.py",
]

[tool.pylint.message_control]
max-line-length = 120
disable = [
    "C0103", # ignore invalid-names like "x", "y"
    "C0415", # ignore defered imports
    "R0801", # ignore code duplications
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.design]
max-args = 15
max-locals = 20
max-attributes = 15
max-parents = 10
min-public-methods = 0
