[metadata]
name = finam_plot
description = Plot components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ufz.de/FINAM/finam-plot
author = FINAM Developers
author_email = finam@ufz.de
maintainer = FINAM Developers
maintainer_email = finam@ufz.de
license = LGPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://FINAM.pages.ufz.de/finam/
    Source = https://git.ufz.de/FINAM/finam-plot
    Tracker = https://git.ufz.de/FINAM/finam-plot/-/issues
    Changelog = https://git.ufz.de/FINAM/finam-plot/-/blob/main/CHANGELOG.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.14.5,<2
    xarray>=2022.03
    pint>=0.19.0
    pint_xarray>=0.3.0
    matplotlib>=3.5,<4
    finam @ git+https://git.ufz.de/FINAM/finam.git@request-parameters
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx>=3,<4
test =
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
